figcaption + file tree structure + custom fonts

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <div id="latest-post-box">
                 <h1 id="latest-post-title"><strong>Perfect Pizza Dough</strong></h1>
                 <p id="latest-post-caption">...your mum will beg you for this recipe!</p>
-                <a id="latest-post-read-more" href="blog-post.html">read more</a>
+                <a id="latest-post-read-more" href="blog-post/blog-post.html">read more</a>
             </div>
         </header>
 
