--- a/blog-post/blog-post.html
+++ b/blog-post/blog-post.html
@@ -4,12 +4,12 @@
     <meta charset="utf-8" />
     <title>Do Me a Flavor - Digital Cooking Book for the Busiest</title>
     <script src="https://kit.fontawesome.com/5f13b6ccc2.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="css/blog-post.css">
+    <link rel="stylesheet" href="../css/blog-post.css">
 </head>
 
 <body>
     <nav id="navbar">
-        <a id="nv-logo" href="index.html">
+        <a id="nv-logo" href="../index.html">
             <span id="nv-logo-img"></span>
             <span id="nv-logo-text"></span>
         </a>
@@ -83,8 +83,8 @@
                     wallnuts on top. If you would rather use some chicken and corn - go ahead. But please, no 
                     matter how bad your day was, do not eat it with ketchup.
                 </p>
-                <img id="post-photo" src="photos/dough.jpg" alt="dough">
-                <p class="image-caption">You can store your dough in fridge for up to 2 weeks. Just make sure it won't dry.</p>
+                <img id="post-photo" src="../photos/dough.jpg" alt="dough">
+                <figcaption class="image-caption">You can store your dough in fridge for up to 2 weeks. Just make sure it won't dry.</figcaption>
                 <p class="end-of-text">* * *</p>
             </article>
             
